<resources>
    <string name="app_name">Weather</string>
    <string name="search_title">Search</string>
    <string name="add_city_title">Plus</string>

    <string name="city_name_1">Kharkiv</string>
    <string name="city_name_2">Kiev</string>
    <string name="city_name_3">London</string>
    <string name="city_name_4">New York</string>
    <string name="city_name_5">Los Angeles</string>

    <string name="view_navigatoin_open">Open</string>
    <string name="view_navigatoin_close">Close</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">d377ee099072dbcca1beedc79e17f374</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>

</resources>
